Fixing Portfolio alignment

--- a/css/style.css
+++ b/css/style.css
@@ -255,11 +255,17 @@ footer {
   footer li {
     display: inline; }
 
-.one {
+.one, .third {
   width: 33.3333%; }
 
 .two {
   width: 60%; }
+
+.quarter {
+  width: 25%; }
+
+.half {
+  width: 50%; }
 
 .showcase {
   display: none; }
@@ -547,8 +553,13 @@ ul.links {
     width: 80%; }
 
   .two,
-  .one {
+  .one,
+  .third,
+  .half {
     width: 100%; }
+
+  .quarter {
+    width: 50%; }
 
   ul.links li {
     width: 100%;
