--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -212,13 +212,22 @@ footer {
 	}
 	}
 
-.one {
+.one, .third {
 	width: 33.3333%;
 	}
 
 .two {
 	width: 60%;
 	}
+
+.quarter {
+	width: 25%;
+}
+
+.half {
+	width: 50%;
+}
+
 
 .showcase {
 
